--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ anyio==4.10.0
 certifi==2025.8.3
 click==8.2.1
 colorama==0.4.6
+coverage==7.10.3
 distro==1.9.0
 fastapi==0.116.1
 groq==0.31.0
@@ -10,11 +11,19 @@ h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
+iniconfig==2.1.0
 jiter==0.10.0
 openai==1.99.6
+packaging==25.0
+pluggy==1.6.0
 pydantic==2.11.7
 pydantic-settings==2.10.1
 pydantic_core==2.33.2
+Pygments==2.19.2
+pytest==8.4.1
+pytest-asyncio==1.1.0
+pytest-cov==6.2.1
+pytest-mock==3.14.1
 python-dotenv==1.1.1
 sniffio==1.3.1
 starlette==0.47.2
